--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "mariadb": "^3.2.3"
   },
   "devDependencies": {
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
     "mocha": "^10.2.0",
     "supertest": "^6.3.3"
   }
