--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,15 @@ services:
     container_name: api-node
     build:
       context: .
+      target: api
+      dockerfile: Dockerfile
     environment:
       NODE_ENV: development
-    image: node:20-alpine3.19
+    depends_on:
+      - db
     ports:
       - 3000:3000
+
   db:
     container_name: mariadb
     image: mariadb
@@ -16,6 +20,11 @@ services:
       - 3036:3036
     environment:
       MARIADB_ROOT_PASSWORD: toto
+      MARIADB_USER: toto
+      MARIADB_PASSWORD: toto
+      MARIADB_DATABASE: totoDb
+    volumes:
+      - ./docker/mariadb/data:/var/lib/mysql/
   
   adminer:
     container_name: adminer
