--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -44,17 +44,16 @@ jobs:
       - run: npm test
 
   lint:
+    name: Lint Code Base
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: read
-      statuses: write
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Super-linter
-        uses: super-linter/super-linter@v5.7.2
+      - name: Lint Code Base
+        uses: github/super-linter@v4
         env:
-          DEFAULT_BRANCH: main
+          VALIDATE_ALL_CODEBASE: false
+          DEFAULT_BRANCH: develop
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
