docker compose prod

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,13 +4,13 @@ services:
     image: mariadb
     restart: always
     ports:
-      - 3307:3307
+      - 3306:3306
     environment:
-      MARIADB_ROOT_PASSWORD: ${DB_PASSWORD}
-      MARIADB_USER: ${DB_USER}
-      MARIADB_PASSWORD: ${DB_PASSWORD}
-      MARIADB_DATABASE: ${DB_DATABASE}
-      MYSQL_TCP_PORT: ${DB_PORT}
+      MARIADB_ROOT_PASSWORD: ${DB_PASSWORD_PROD}
+      MARIADB_USER: ${DB_USER_PROD}
+      MARIADB_PASSWORD: ${DB_PASSWORD_PROD}
+      MARIADB_DATABASE: ${DB_DATABASE_PROD}
+      MYSQL_TCP_PORT: ${DB_PORT_PROD}
     volumes:
       - ./docker/mariadb/data:/var/lib/mysql/
 
@@ -21,12 +21,12 @@ services:
       context: .
       target: api
     environment:
-      NODE_ENV: development
+      NODE_ENV: production
     depends_on:
       - db
-    image: ghcr.io/alexispet/final-test-slupshi/api:develop
+    image: ghcr.io/alexispet/final-test-slupshi/api:latest
     ports:
-      - 3000:3000 
+      - 80:80 
   
   adminer:
     container_name: adminer
