--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,13 @@ services:
     image: adminer
     restart: always
     ports:
-      - 8081:8080
+      - 8081:8080  
+
+  watchtower:
+    image: containrrr/watchtower
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    command: --interval 30 --label-enable
       
 
 
