--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -41,9 +41,11 @@ jobs:
   deploy-development:
     runs-on: ubuntu-latest
     needs: [test]
+    env:
+      HOST: ${{ secrets.SSH_HOST }}
     environment:
       name: development
-      url: ${{ secrets.SSH_HOST }}
+      url: $HOST
     if: github.ref_name == 'develop'
     permissions:
       contents: read
@@ -65,9 +67,11 @@ jobs:
   deploy-production:
     runs-on: ubuntu-latest
     needs: [test]
+    env:
+      HOST: ${{ secrets.SSH_HOST }}
     environment:
       name: production
-      url: ${{ secrets.SSH_HOST }}
+      url: $HOST
     if: github.ref_name == 'main'
     permissions:
       contents: read
