--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -42,11 +42,11 @@ jobs:
   deploy-development:
     runs-on: ubuntu-latest
     needs: [test]
-    env:
+    with:
       HOST: ${{ secrets.SSH_HOST }}
     environment:
       name: development
-      url: http://$HOST:3000
+      url: "http://$HOST:3000"
     if: github.ref_name == 'develop'
     permissions:
       contents: read
@@ -68,11 +68,11 @@ jobs:
   deploy-production:
     runs-on: ubuntu-latest
     needs: [test]
-    env:
+    with:
       HOST: ${{ secrets.SSH_HOST }}
     environment:
       name: production
-      url: http://$HOST:80
+      url: "http://$HOST:80"
     if: github.ref_name == 'main'
     permissions:
       contents: read
