--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -42,7 +42,7 @@ jobs:
   deploy-development:
     runs-on: ubuntu-latest
     needs: [test]
-    with:
+    env:
       HOST: ${{ secrets.SSH_HOST }}
     environment:
       name: development
@@ -68,7 +68,7 @@ jobs:
   deploy-production:
     runs-on: ubuntu-latest
     needs: [test]
-    with:
+    env:
       HOST: ${{ secrets.SSH_HOST }}
     environment:
       name: production
