--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -34,8 +34,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: adambirds/docker-compose-action@v1.3.0
-        env_file: .env
         env:
+          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_NAME: ${{ secrets.DB_NAME }}
           NODE_ENV: development
         with:
           compose-file: "./docker-compose.yml"
