--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       MARIADB_ROOT_PASSWORD: ${DB_PASSWORD}
       MARIADB_USER: ${DB_USER}
       MARIADB_PASSWORD: ${DB_PASSWORD}
-      MARIADB_DATABASE: ${DB_DATABASE}
-      MYSQL_TCP_PORT: ${DB_PORT}
+      MARIADB_DATABASE: ${DB_NAME}
+      MYSQL_TCP_PORT: 3307
     volumes:
       - ./docker/mariadb/data:/var/lib/mysql/
 
