--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -33,12 +33,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: adambirds/docker-compose-action@v1.3.0
+      - uses: adambirds/docker-compose-action@v1.3.0      
+        run: |
+          echo "${{ secrets.ENV_FILE }}" > .env
         env:
           DB_HOST: ${{ secrets.DB_HOST }}
           DB_USER: ${{ secrets.DB_USER }}
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-          DB_NAME: ${{ secrets.DB_NAME }}
+          DB_DATABASE: ${{ secrets.DB_NAME }}
+          DB_PORT: 3306
           NODE_ENV: development
         with:
           compose-file: "./docker-compose.yml"
