--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,11 +15,15 @@ services:
       - ./docker/mariadb/data:/var/lib/mysql/
 
   api:
-    container_name: api-node
-    env_file: .env
+    container_name: api-node    
     build: .
     environment:
       NODE_ENV: development
+      DB_HOST: ${DB_HOST}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_DATABASE: ${DB_DATABASE}
+      DB_PORT: ${DB_PORT}
     depends_on:
       - db
     image: ghcr.io/alexispet/final-test-slupshi/api:develop
