--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -38,7 +38,7 @@ jobs:
       DB_USER: ${{ secrets.DB_USER }}
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
       DB_DATABASE: ${{ secrets.DB_NAME }}
-      DB_PORT: 3306
+      DB_PORT: ${{ secrets.DB_PORT }}
       NODE_ENV: development     
     steps:       
       - uses: actions/checkout@v4
