--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,9 +34,14 @@ services:
 
   watchtower:
     image: containrrr/watchtower
+    command: --interval 30 --label-enable
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-    command: --interval 30 --label-enable
+    environment:
+      WATCHTOWER_NOTIFICATIONS: email
+      WATCHTOWER_NOTIFICATION_EMAIL_FROM: toto@gmail.com
+      WATCHTOWER_NOTIFICATION_EMAIL_TO: slupshi@gmail.com
+      WATCHTOWER_NOTIFICATION_EMAIL_SERVER: smtp.gmail.com
       
 
 
