--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,6 +1,6 @@
 services: 
-  db:
-    container_name: mariadb
+  db-dev:
+    container_name: "[DEV] mariadb"
     image: mariadb:11.2.2-jammy
     restart: always
     ports:
@@ -14,8 +14,8 @@ services:
     volumes:
       - ./docker/mariadb/data:/var/lib/mysql/
 
-  api:
-    container_name: api-node    
+  api-dev:
+    container_name: "[DEV] API Node"  
     build: .
     environment:
       NODE_ENV: development
@@ -25,15 +25,15 @@ services:
       DB_DATABASE: ${DB_DATABASE}
       DB_PORT: ${DB_PORT}
     depends_on:
-      - db
+      - db-dev
     image: ghcr.io/alexispet/final-test-slupshi/api:develop
     ports:
       - 3000:3000
     labels:
       - "com.centurylinklabs.watchtower.enable=true"
 
-  watchtower:
-    container_name: Watchtower 
+  watchtower-dev:
+    container_name: "[DEV] Watchtower"
     image: containrrr/watchtower
     command: --interval 30 --label-enable
     volumes:
