test bad gateway

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -36,11 +36,10 @@ services:
       - "traefik.docker.network=proxy"
       - "traefik.enable=true"
       - "traefik.basic.port=80"
-      - "traefik.http.services.pihole.loadbalancer.server.port=9000"
       - "traefik.basic.protocol=http"
-      - "traefik.admin.protocol=https"
-      - "traefik.admin.port=443"
-      - "traefik.frontend.rule=Host:slupshi.alpex.ovh"
+      - "traefik.basic.protocol=https"
+      - "traefik.basic.port=443"
+      - "traefik.basic.frontend.rule=Host:slupshi.alpex.ovh"
       - "com.centurylinklabs.watchtower.enable=true"
       - "com.centurylinklabs.watchtower.scope=prod"    
     networks:
